--- a/Projects/index.html
+++ b/Projects/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NSU Market</title>
+    <title>Student Market</title>
     <!-- CSS & Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/style2.css">
@@ -30,7 +30,6 @@
             <ul class="nav-items d-flex m-auto align-items-center justify-content-center">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="">Items</a></li>
-                <li><a href="">Categories</a></li>
             </ul>
         </div>
 
@@ -45,7 +44,7 @@
         <div class="stickycart">
             <div class="itemcount">
                 <i class="fas fa-cart-plus"></i>
-                <p><span class="count">0</span> Items</p>
+                <p><span id="count">0</span> Items</p>
             </div>
             <div class="total">
                 <span>Tk.</span>
@@ -117,29 +116,29 @@
                         <div class="item-card">
                             <img src="images/1235.png" alt="">
                             <h4>Title</h4>
-                            <p>Description</p>
-                            <button id = "addcart"> Add to Cart</button>
+                            <p><span>100</span> Tk.</p>
+                            <button class = "addcart"> Add to Cart</button>
                         </div>
 
                         <div class="item-card">
                             <img src="images/1235.png" alt="">
-                            <h4>Title</h4>
-                            <p>Description</p>
-                            <button id = "addcart"> Add to Cart</button>
+                            <h4>Title2</h4>
+                            <p><span>150</span> Tk.</p>
+                            <button class = "addcart"> Add to Cart</button>
                         </div>
 
                         <div class="item-card">
                             <img src="images/1235.png" alt="">
-                            <h4>Title</h4>
-                            <p>Description</p>
-                            <button id = "addcart"> Add to Cart</button>
+                            <h4>Title3</h4>
+                            <p><span>50</span> Tk.</p>
+                            <button class = "addcart"> Add to Cart</button>
                         </div>
 
                         <div class="item-card">
                             <img src="images/1235.png" alt="">
-                            <h4>Title</h4>
-                            <p>Description</p>
-                            <button id="addcart"> Add to Cart</button>
+                            <h4>Title4</h4>
+                            <p><span>200</span> Tk.</p>
+                            <button class ="addcart"> Add to Cart</button>
                         </div>
 
                     </div>
@@ -182,7 +181,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script src="./js/cart.js"></script>
+    <script src="js/cart.js"></script>
 
 </body>
 
