--- a/src/structures/admin-approve-item.html
+++ b/src/structures/admin-approve-item.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="seller.manage.css" />
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../lib/jquery-3.5.1.min.js"></script>
+  <script src="util.js"></script>
   <script src="admin-approve-item.js"></script>
 </head>
 
@@ -22,24 +23,6 @@
         <th>Image URL</th>
         <th>Price</th>
         <th>Approve</th>
-      </tr>
-      <tr>
-        <td>123</td>
-        <td>Product 1</td>
-        <td>Price</td>
-        <td>Status</td>
-        <td>#ID</td>
-        <td>Title</td>
-        <td>Price</td>
-        <td>Status</td>
-        <td>
-          <button type="button" class="btn btn-link edit-button approve-button" data-item-id="">
-            Approve
-          </button>
-          <button type="button" class="btn btn-link delete-button" data-item-id="">
-            Reject
-          </button>
-        </td>
       </tr>
     </table>
   </div>
