--- a/src/structures/admin-approve-seller.html
+++ b/src/structures/admin-approve-seller.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="seller.manage.css" />
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../lib/jquery-3.5.1.min.js"></script>
+  <script src="util.js"></script>
   <script src="admin-approve-seller.js"></script>
+
 </head>
 
 <body>
@@ -18,20 +20,6 @@
         <th>Phone</th>
         <th>Address</th>
         <th>Approve</th>
-      </tr>
-      <tr>
-        <td>123</td>
-        <td>Name</td>
-        <td>01234343</td>
-        <td>216...</td>
-        <td>
-          <button type="button" class="btn btn-link edit-button" data-seller-id="">
-            Approve
-          </button>
-          <button type="button" class="btn btn-link delete-button" data-seller-id="">
-            Reject
-          </button>
-        </td>
       </tr>
     </table>
   </div>
