--- a/src/structures/seller-item.html
+++ b/src/structures/seller-item.html
@@ -34,7 +34,7 @@
       </div>
       <div class="form-group">
         <label for="price">Price:</label>
-        <input type="number" step=".1" class="form-control" id="price" value="0.0" required />
+        <input type="number" step="1" class="form-control" id="price" value="0.0" required />
       </div>
       <button id="submit-button" type="submit" class="btn btn-default">Submit</button>
     </form>
