--- a/src/structures/admin-manage-items.html
+++ b/src/structures/admin-manage-items.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="seller.manage.css" />
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <script src="../lib/jquery-3.5.1.min.js"></script>
+  <script src="util.js"></script>
   <script src="admin-manage-items.js"></script>
 </head>
 
@@ -20,28 +21,6 @@
         <th>Feature</th>
         <th>Delete</th>
         <th>Reviews</th>
-      </tr>
-      <tr>
-        <td>123</td>
-        <td>Name</td>
-        <td>01234343</td>
-        <td>216...</td>
-        <td>
-          <button type="button" class="btn btn-link edit-button" data-item-id="">
-            Feature
-          </button>
-        </td>
-        <td>
-          <button type="button" class="btn btn-link edit-button" data-item-id="">
-            Delete
-          </button>
-        </td>
-
-        <td>
-          <button type="button" class="btn btn-link edit-button" data-item-id="">
-            Reviews
-          </button>
-        </td>
       </tr>
     </table>
   </div>
