--- a/src/structures/seller-manage.html
+++ b/src/structures/seller-manage.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="seller.manage.css" />
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <script src="../lib/jquery-3.5.1.min.js"></script>
+  <script src="util.js"></script>
   <script src="seller-manage.js"></script>
 </head>
 
@@ -12,7 +13,7 @@
   <div class="container-fluid" id="mng-cont">
     <div id="seller-mng-cont-up">
       <div id="seller-wallet">
-        <span>Balance: <span id="balance-amount">0.00</span> tk (<a href="#">Withdraw</a>)</span>
+        <span>Earned money: <span id="balance-amount">0.00</span> BDT </span>
       </div>
       <button id="add-new-item" type="button" class="btn btn-primary">Add new item</button>
     </div>
@@ -26,22 +27,7 @@
           <th>Edit</th>
           <th>Delete</th>
         </tr>
-        <tr>
-          <td>#ID</td>
-          <td>Title</td>
-          <td>Price</td>
-          <td>Status</td>
-          <td><button type="button" class="btn btn-link edit-button" data-item-id="">Edit</button></td>
-          <td><button type="button" class="btn btn-link delete-button" data-item-id="">Delete</button></td>
-        </tr>
-        <tr>
-          <td>#ID</td>
-          <td>Title</td>
-          <td>Price</td>
-          <td>Status</td>
-          <td><button type="button" class="btn btn-link edit-button" data-item-id="">Edit</button></td>
-          <td><button type="button" class="btn btn-link delete-button" data-item-id="">Delete</button></td>
-        </tr>
+
       </table>
     </div>
   </div>
