--- a/src/admin/manage-reports.html
+++ b/src/admin/manage-reports.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="seller.manage.css" />
-  <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="../lib/jquery-3.5.1.min.js"></script>
-  <script src="admin-manage-reports.js"></script>
+  <link rel="stylesheet" href="../app/css/style.css" />
+  <link href="../app/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="../app/lib/jquery-3.5.1.min.js"></script>
+  <script src="../app/lib/util.js"></script>
+  <script src="../app/js/admin-manage-reports.js"></script>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     </table>
   </div>
 
-  <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../app/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
