--- a/src/seller/manage-items.html
+++ b/src/seller/manage-items.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="seller.manage.css" />
-  <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <script src="../lib/jquery-3.5.1.min.js"></script>
-  <script src="util.js"></script>
-  <script src="seller-manage.js"></script>
+  <link rel="stylesheet" href="../app/css/style.css" />
+  <link href="../app/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="../app/lib/jquery-3.5.1.min.js"></script>
+  <script src="../app/lib/util.js"></script>
+  <script src="../app/js/seller-manage-items.js"></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../app/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
