--- a/src/seller/modify-item.html
+++ b/src/seller/modify-item.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-  <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="../lib/jquery-3.5.1.min.js"></script>
-  <script src="seller-item.js"></script>
+  <link rel="stylesheet" href="../app/css/style.css" />
+  <link href="../app/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="../app/lib/jquery-3.5.1.min.js"></script>
+  <script src="../app/lib/util.js"></script>
+  <script src="../app/js/seller-modify-item.js"></script>
 </head>
 
 <body>
@@ -40,7 +42,7 @@
     </form>
   </div>
 
-  <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../app/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
