--- a/Projects/pages/cart.html
+++ b/Projects/pages/cart.html
@@ -17,7 +17,7 @@
     <header class="d-flex">
 
         <div class="image mr-auto">
-            <h1>LOGO</h1>
+            <img src="../images/logo.png" alt="">
         </div>
 
         <div class="search-bar mr-auto align-self-center">
@@ -29,14 +29,13 @@
 
         <div class="align-self-center">
             <ul class="nav-items d-flex m-auto align-items-center justify-content-center">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="">Items</a></li>
-                <li><a href="">Categories</a></li>
+                <li><a href="../index.php">Home</a></li>
+                <li><a href="items.php">Items</a></li>
             </ul>
         </div>
 
         <div class="align-self-center ml-auto">
-            <button class="login"><a href="">Logout</a></button>
+            <button class="login"><a href="../api/logout.php">Logout</a></button>
         </div>
 
     </header>
