Added functionalities to check whether seller is approved

--- a/src/seller/manage-items.html
+++ b/src/seller/manage-items.html
@@ -15,7 +15,7 @@
       <div id="seller-wallet">
         <span>Earned money: <span id="balance-amount">0.00</span> BDT </span>
       </div>
-      <button id="add-new-item" type="button" class="btn btn-primary">Add new item</button>
+      <button id="add-new-item" type="button" class="btn btn-primary" disabled>Add new item</button>
     </div>
     <div id="seller-mng-cont-bottom">
       <table id="mng-table" class="table table-striped">
