--- a/Projects/pages/login.html
+++ b/Projects/pages/login.html
@@ -30,7 +30,7 @@
             <ul class="nav-items d-flex m-auto align-items-center justify-content-center">
                 <li><a href="../index.php">Home</a></li>
                 <li><a href="items.php">Items</a></li>
-                <li><a href="">Become a seller!</a></li>
+                <li><a href="register.html">Become a seller!</a></li>
             </ul>
         </div>
 
@@ -44,7 +44,7 @@
         <div class="login-form">
             <h1>Login</h1>
             <div class="user-id">
-                <p>Email/Username</p>
+                <p>User ID</p>
                 <input class="w-100" type="text" placeholder="Enter email or username" name="username">
             </div>
             <div class="user-pass">
