--- a/Projects/pages/register.html
+++ b/Projects/pages/register.html
@@ -79,7 +79,10 @@
                 <input class="w-100" id="repass" type="password" placeholder="Re-enter password" name="confirm_pass" required>
                 <p id="match" style="font-size: 85%;"></p>
             </div>
-            <div class=""></div>
+            <div class="d-flex m-auto">
+                <input type="checkbox" name="seller" value="" id=""> 
+                 <p class="" style="margin: auto 10px;">Become a seller!</p> 
+            </div>
             <div class="reg-btn">
                 <button class="user-lg" type="submit">Register</button>
             </div>
