Added logout for control panel

--- a/src/admin/manage-pending-sellers.html
+++ b/src/admin/manage-pending-sellers.html
@@ -12,6 +12,9 @@
 
 <body>
   <div class="container-fluid" id="mng-cont">
+    <!-- Logout -->
+    <button id="logout-button" onclick="logout()" class="btn btn-link">Logout </button>
+
     <!-- Navigation -->
     <nav class="navbar navbar-default">
       <ul class="nav navbar-nav">
