--- a/src/seller/manage-items.html
+++ b/src/seller/manage-items.html
@@ -11,6 +11,9 @@
 
 <body>
   <div class="container-fluid" id="mng-cont">
+    <!-- Logout -->
+    <button id="logout-button" onclick="logout()" class="btn btn-link">Logout </button>
+
     <div id="seller-mng-cont-up">
       <div id="seller-wallet">
         <span>Earned money: <span id="balance-amount">0.00</span> BDT </span>
